# rust-demo

./: Cargo.toml  README.md  a.ts  farm.config.ts  output.js
src/: find_config.rs  main.rs  read_file.rs
