[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = "0.33.19"
swc_ecma_parser = "0.143.8"
swc_ecma_transforms = "0.229.15"
swc_ecma_codegen = "0.148.10"
swc_ecma_ast="0.112.5"
swc_ecma_visit="0.98.6"
